--- a/languages/mcash-woocommerce-gateway-nb_NO.po
+++ b/languages/mcash-woocommerce-gateway-nb_NO.po
@@ -21,154 +21,154 @@ msgstr ""
 "X-Textdomain-Support: yes"
 
 #: mcash-woocommerce-gateway.php:58
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Settings"
 msgstr "Innstillinger"
 
 #: classes/mcash-woocommerce.php:19
 #: classes/mcash-woocommerce.php:21
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH"
 msgstr "mCASH"
 
 #: classes/mcash-woocommerce.php:20
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH Payment Gateway Plug-in for WooCommerce"
 msgstr "mCASH Payment Gateway Plug-in for WooCommerce"
 
 #: classes/mcash-woocommerce.php:164
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Enable / Disable"
 msgstr "Aktiver / deaktiver"
 
 #: classes/mcash-woocommerce.php:165
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Enable this payment gateway"
 msgstr "Aktiver denne payment gateway"
 
 #: classes/mcash-woocommerce.php:170
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Title"
 msgstr "Tittel"
 
 #: classes/mcash-woocommerce.php:172
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Payment title the customer will see during the checkout process."
 msgstr "Betaling tittel kunden vil se i løpet av betalingsprosessen."
 
 #: classes/mcash-woocommerce.php:176
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Description"
 msgstr "Beskrivelse"
 
 #: classes/mcash-woocommerce.php:178
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Payment description the customer will see during the checkout process."
 msgstr "Betaling beskrivelse kunden vil se i løpet av betalingsprosessen."
 
 #: classes/mcash-woocommerce.php:183
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "merchant id"
 msgstr "merchant id"
 
 #: classes/mcash-woocommerce.php:185
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "This is the merchant id that was provided by mcash.no when you signed up for an account at %shttps://my.mca.sh/mssp/%s ."
 msgstr "Dette er merchant id som ble levert av mcash.no når du registrerte deg for en konto på"
 
 #: classes/mcash-woocommerce.php:188
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "merchant user id"
 msgstr "merchant user id"
 
 #: classes/mcash-woocommerce.php:190
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "The merchant user created by you at %shttps://my.mca.sh/mssp/%s ."
 msgstr "Merchant bruker opprettet av deg på"
 
 #: classes/mcash-woocommerce.php:219
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Test Mode"
 msgstr "Test Mode"
 
 #: classes/mcash-woocommerce.php:220
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Enable Test Mode"
 msgstr "Aktiver test mode"
 
 #: classes/mcash-woocommerce.php:222
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Place the payment gateway in test mode."
 msgstr "Plasser betaling gateway i test mode"
 
 #: classes/mcash-woocommerce.php:193
 #: classes/mcash-woocommerce.php:194
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Generate new RSA keys"
 msgstr "Generere nye RSA-nøkler"
 
 #: classes/mcash-woocommerce.php:196
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "If set to \"yes\", new keys will be generated, and you need to copy the public key to %shttps://my.mca.sh/mssp/%s ."
 msgstr "Hvis satt til \"yes\", nye nøkler vil bli generert, og du må kopiere den offentlige nøkkelen til %shttps://my.mca.sh/mssp/%s ."
 
 #: classes/mcash-woocommerce.php:200
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Private RSA key"
 msgstr "Privat RSA nøkkel"
 
 #: classes/mcash-woocommerce.php:202
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Your private RSA key. Keep it secret."
 msgstr "Din private RSA nøkkel. Holde det hemmelig."
 
 #: classes/mcash-woocommerce.php:206
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Public RSA key"
 msgstr "Publik RSA nøkkel"
 
 #: classes/mcash-woocommerce.php:208
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Your public RSA key. Copy this to the corresponding field for your merchant user at %shttps://my.mca.sh/mssp/%s ."
 msgstr "Din publik RSA nøkkel. Kopier denne til det tilsvarende feltet for din merchant user på %shttps://my.mca.sh/mssp/%s ."
 
 #: classes/mcash-woocommerce.php:212
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "autocapture"
 msgstr "autocapture"
 
 #: classes/mcash-woocommerce.php:213
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Capture an authorized payment automatically"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:215
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Capture an authorized payment automatically. If not set, capture needs to be done in the order view."
 msgstr ""
 
 #: classes/mcash-woocommerce.php:282
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Gateway Disabled"
 msgstr "Gateway deaktivert"
 
 #: classes/mcash-woocommerce.php:282
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH does not support your store currency."
 msgstr "mCASH støtter ikke butikken din valuta."
 
 #: classes/mcash-woocommerce.php:338
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH manual capture completed"
 msgstr "mCASH manuell capture fullført"
 
 #: classes/mcash-woocommerce.php:344
 #: classes/mcash-woocommerce.php:345
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH manual capture failed"
 msgstr "mCASH manuell capture mislyktes"
 
@@ -179,64 +179,64 @@ msgid "<strong>%s</strong> is enabled and WooCommerce is not forcing the SSL cer
 msgstr "<strong>%s</strong> er aktivert og WooCommerce er ikke presser SSL-sertifikatet på kassen. Sørg for at du har en gyldig SSL-sertifikat og at du er <a href=\"%s\"> tvinge kassa sider som skal sikres"
 
 #: classes/mcash-woocommerce.php:425
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH payment status : auth "
 msgstr "mCASH betalingsstatus : auth "
 
 #: classes/mcash-woocommerce.php:428
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH automatic capture completed"
 msgstr "mCASH automatisk capture fullført"
 
 #: classes/mcash-woocommerce.php:432
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH automatic capture failed"
 msgstr "mCASH automatisk capture mislyktes"
 
 #: classes/mcash-woocommerce.php:433
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "mCASH capture failed"
 msgstr "mCASH capture mislyktes"
 
 #: classes/mcash-woocommerce.php:456
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "We are currently experiencing problems trying to connect to this payment gateway. Sorry for the inconvenience."
 msgstr "Vi opplever for tiden problemer med å koble seg til denne payment gateway. Beklager det inntrufne."
 
 #: classes/mcash-woocommerce.php:179
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Pay with %s"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:226
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Log Mode"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:227
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Enable logging"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:232
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "testbed_token"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:234
 #, php-format
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "When using mCASH %stest environment%s , this token needs to be set"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:238
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "test_server"
 msgstr ""
 
 #: classes/mcash-woocommerce.php:242
-#@ mcash-woocommerce
+#@ mcash-woocommerce-gateway
 msgid "Only concerns developers"
 msgstr ""
 
